[gd_scene load_steps=4 format=3 uid="uid://onvgmdcfvyf"]

[ext_resource type="Script" uid="uid://b3apck5qcfc7u" path="res://characters/player/player.gd" id="1_3eadt"]
[ext_resource type="Texture2D" uid="uid://cikd0g87a5gov" path="res://assets/1x1Pixel.png" id="1_dnjla"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6p3mc"]
size = Vector2(100, 100)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3eadt")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(100, 100)
texture = ExtResource("1_dnjla")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6p3mc")

[node name="GroundRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 51)

[node name="JumpTimeout" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="HurtColorTimeout" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="HurtColorTimeout" to="." method="_on_hurt_color_timeout"]
